# ai-for-my-life

./: .gitignore  README.md  pyproject.toml
src/agents/: finance-agent.py
src/data-sync-scripts/: simple-fin-chase-transactions.py
src/services/: db.py
